bisonflex/cmdoptions/cmdoptions.output
Terminals unused in grammar

   COMMA
   H_BIF_PTYPE
   H_BIF_IMAGECFG
   H_BIF_PMCCONFIG


Grammar

    0 $accept: top $end

    1 top: option_list

    2 option_list: /* empty */
    3            | option_list option

    4 option: _IMAGE filename
    5       | _SPLIT memsplit
    6       | filloption
    7       | _O_TOK I filename
    8       | _O_TOK filename
    9       | _P_TOK IDENTIFIER
   10       | _W wopt
   11       | _LOG loglevel
   12       | _H helpoption
   13       | _BIF_HELP bifhelpoption
   14       | _ENCRYPT keysource startcbc key0 hmac keyfile
   15       | _EFUSEPPKBITS filename
   16       | _EFUSEPUFBITS filename
   17       | _GENERATE_HASHES
   18       | _NONBOOTING
   19       | _LEGACY
   20       | _PADIMAGEHEADER
   21       | _PADIMAGEHEADER EQUALS HEXSTRING
   22       | _PADIMAGEHEADER HEXSTRING
   23       | _PROCESS_BITSTREAM bitfile_type
   24       | _DUAL_QSPI_MODE qpsi_mode
   25       | _DUAL_OSPI_MODE opsi_mode
   26       | _SPKSIGNATURE filename
   27       | _PACKAGENAME IDENTIFIER
   28       | _ARCH archOptions
   29       | _R
   30       | _NOAUTHBLOCKS
   31       | _GENERATE_KEYS key_type
   32       | _DEBUG_TOK
   33       | _ZYNQMPENCRDUMP encrDumpOptions
   34       | _ZYNQMPES1
   35       | _SECUREDEBUG auth_type
   36       | _AUTHJTAG authJtagOptions
   37       | _READ readImageOptions
   38       | _VERIFY verifyImageOptions
   39       | _DUMP dumpOptions
   40       | _DUMP_DIR filename
   41       | _PUF filename
   42       | _VERIFYKDF filename
   43       | _AUTH_OPTIMIZATION
   44       | _OVERLAYCDO filename
   45       | _OUT_TYPE outputType

   46 filename: HEXSTRING
   47         | IDENTIFIER
   48         | FILENAME
   49         | QFILENAME

   50 memsplit: MCS
   51         | BIN

   52 filloption: _FILL
   53           | _FILL number

   54 outputType: MCS
   55           | BIN

   56 helpoption: /* empty */
   57           | HBIFHELP
   58           | HARCH
   59           | HAUTHOPT
   60           | HIMAGE
   61           | HFILL
   62           | H_SPLIT
   63           | HO
   64           | HP
   65           | HW
   66           | HEFUSEPPKBITS
   67           | HGENHASHES
   68           | HLEGACY
   69           | HPADHDR
   70           | H_SPKSIGN
   71           | HPACKAGE
   72           | HENCRYPT
   73           | HGENKEYS
   74           | HDQSPI
   75           | HLOG
   76           | HZYNQMPES1
   77           | HPROCESSBIT
   78           | HNONBOOTING
   79           | HENCRDUMP
   80           | HVERIFY
   81           | HVERIFYKDF
   82           | HREAD
   83           | HSECUREDEBUG
   84           | HDUMP
   85           | HDUMPDIR
   86           | HOVLCDO
   87           | HOUTTYPE

   88 bifhelpoption: /* empty */
   89              | H_BIF_INIT
   90              | H_BIF_UDFBH
   91              | H_BIF_AES
   92              | H_BIF_PPK
   93              | H_BIF_PSK
   94              | H_BIF_SPK
   95              | H_BIF_SSK
   96              | H_BIF_SPKSIGN
   97              | H_BIF_HDRSIGN
   98              | H_BIF_BOOTIMAGE
   99              | H_BIF_BL
  100              | H_BIF_ENCR
  101              | H_BIF_PID
  102              | H_BIF_AUTH
  103              | H_BIF_TCMBOOT
  104              | H_BIF_OPTIONALDATA
  105              | H_BIF_CHKSM
  106              | H_BIF_POWNER
  107              | H_BIF_PRESIGN
  108              | H_BIF_UDF
  109              | H_BIF_XIP
  110              | H_BIF_ALIGN
  111              | H_BIF_OFFSET
  112              | H_BIF_RES
  113              | H_BIF_LOAD
  114              | H_BIF_STARTUP
  115              | H_BIF_KEYSRC
  116              | H_BIF_FSBLCFG
  117              | H_BIF_BOOTDEV
  118              | H_BIF_DESTCPU
  119              | H_BIF_DESTDEV
  120              | H_BIF_EL
  121              | H_BIF_TZ
  122              | H_BIF_AUTHPARAM
  123              | H_BIF_BHKEY
  124              | H_BIF_PFW
  125              | H_BIF_BLOCKS
  126              | H_BIF_BHIV
  127              | H_BIF_METAL
  128              | H_BIF_ELYHNDOFF
  129              | H_BIF_HIVEC
  130              | H_BIF_BHSIGN
  131              | H_SPLIT
  132              | H_SPKSIGN
  133              | H_BIF_BOOTVEC
  134              | H_BIF_PUFDATA
  135              | H_BIF_AARCH32
  136              | H_BIF_BIGENDIAN
  137              | H_BIF_BOOTCONFIG
  138              | H_BIF_COPY
  139              | H_BIF_CORE
  140              | H_BIF_DELAY_HANDOFF
  141              | H_BIF_DELAY_LOAD
  142              | H_BIF_FILE
  143              | H_BIF_ID
  144              | H_BIF_IMAGE
  145              | H_BIF_METAHDR
  146              | H_BIF_NAME
  147              | H_BIF_PARENTID
  148              | H_BIF_PARTITION
  149              | H_BIF_SLR
  150              | H_BIF_TYPE
  151              | H_BIF_KEYSRCENCR
  152              | H_DPACM_ENABLE
  153              | H_BIF_USERKEYS
  154              | HVN_BIF_PCR
  155              | HVN_BIF_PCR_MINDEX
  156              | HV_BIF_IMAGESTORE

  157 wopt: /* empty */
  158     | ON
  159     | OFF

  160 loglevel: /* empty */
  161         | ERROR
  162         | WARNING
  163         | INFO
  164         | DEBUG
  165         | TRACE

  166 keysource: BBRAM
  167          | EFUSE

  168 startcbc: /* empty */
  169         | STARTCBC EQUALS HEXSTRING

  170 key0: /* empty */
  171     | KEY0 EQUALS HEXSTRING

  172 hmac: /* empty */
  173     | HMAC EQUALS HEXSTRING

  174 keyfile: /* empty */
  175        | filename

  176 number: HEXVALUE

  177 bitfile_type: MCS
  178             | BIN

  179 qpsi_mode: PARALLEL
  180          | STACKED qspi_size

  181 opsi_mode: PARALLEL
  182          | STACKED ospi_size

  183 qspi_size: HEXVALUE
  184          | HEXSTRING

  185 ospi_size: HEXVALUE
  186          | HEXSTRING

  187 archOptions: ZYNQ
  188            | ZYNQMP
  189            | VERSAL
  190            | FPGA
  191            | VERSALNET
  192            | VERSAL_2VE_2VM
  193            | SPARTANUP
  194            | TELLURIDE
  195            | LASSEN
  196            | LASSEN_DL9

  197 key_type: AUTH auth_key_options
  198         | GREY
  199         | METAL
  200         | PEM
  201         | RSA
  202         | ECDSA
  203         | ECDSAP521
  204         | LMS

  205 auth_key_options: PEM
  206                 | RSA

  207 auth_type: ECDSA
  208          | RSA

  209 authJtagOptions: authJtagType filename
  210                | authJtagType

  211 authJtagType: ECDSA
  212             | RSA

  213 verifyImageOptions: filename

  214 readImageOptions: filename
  215                 | filename readType

  216 readType: READ_BH
  217         | READ_IHT
  218         | READ_IH
  219         | READ_PHT
  220         | READ_AC

  221 dumpOptions: READ_BH
  222            | filename READ_BH
  223            | READ_BH filename
  224            | filename
  225            | filename DUMP_PLM
  226            | filename DUMP_PMC_CDO
  227            | filename DUMP_BOOT_FILES
  228            | DUMP_SLAVE_PDIS
  229            | DUMP_PUF_PDI

  230 encrDumpOptions: /* empty */
  231                | filename


Terminals, with rules where they appear

$end (0) 0
error (256)
_IMAGE (258) 4
_FILL (259) 52 53
_O_TOK (260) 7 8
I (261) 7
_H (262) 12
_DEBUG_TOK (263) 32
_LEGACY (264) 19
_NONBOOTING (265) 18
_PACKAGENAME (266) 27
_BIF_HELP (267) 13
_LOG (268) 11
ERROR (269) 161
WARNING (270) 162
INFO (271) 163
DEBUG (272) 164
TRACE (273) 165
_SPLIT (274) 5
_PROCESS_BITSTREAM (275) 23
MCS (276) 50 54 177
BIN (277) 51 55 178
_OUT_TYPE (278) 45
_DUMP (279) 39
DUMP_PLM (280) 225
DUMP_PMC_CDO (281) 226
DUMP_BOOT_FILES (282) 227
_DUMP_DIR (283) 40
_PUF (284) 41
DUMP_SLAVE_PDIS (285) 228
DUMP_PUF_PDI (286) 229
_ARCH (287) 28
ZYNQ (288) 187
ZYNQMP (289) 188
VERSAL (290) 189
_R (291) 29
FPGA (292) 190
VERSALNET (293) 191
TELLURIDE (294) 194
VERSAL_2VE_2VM (295) 192
LASSEN (296) 195
LASSEN_DL9 (297) 196
SPARTANUP (298) 193
_DUAL_QSPI_MODE (299) 24
_DUAL_OSPI_MODE (300) 25
PARALLEL (301) 179 181
STACKED (302) 180 182
_W (303) 10
ON (304) 158
OFF (305) 159
_NOAUTHBLOCKS (306) 30
_ZYNQMPES1 (307) 34
_OVERLAYCDO (308) 44
_EFUSEPPKBITS (309) 15
_GENERATE_HASHES (310) 17
_PADIMAGEHEADER (311) 20 21 22
_SPKSIGNATURE (312) 26
_GENERATE_KEYS (313) 31
PEM (314) 200 205
RSA (315) 201 206 208 212
ECDSAP521 (316) 203
AUTH (317) 197
GREY (318) 198
METAL (319) 199
LMS (320) 204
_EFUSEPUFBITS (321) 16
_SECUREDEBUG (322) 35
ECDSA (323) 202 207 211
_AUTHJTAG (324) 36
_ENCRYPT (325) 14
BBRAM (326) 166
EFUSE (327) 167
_P_TOK (328) 9
_READ (329) 37
READ_BH (330) 216 221 222 223
READ_IHT (331) 217
READ_IH (332) 218
READ_PHT (333) 219
READ_AC (334) 220
_VERIFY (335) 38
_VERIFYKDF (336) 42
_AUTH_OPTIMIZATION (337) 43
_ZYNQMPENCRDUMP (338) 33
HEXVALUE (339) 176 183 185
IDENTIFIER (340) 9 27 47
FILENAME (341) 48
QFILENAME (342) 49
HEXSTRING (343) 21 22 46 169 171 173 184 186
EQUALS (344) 21 169 171 173
HMAC (345) 173
STARTCBC (346) 169
KEY0 (347) 171
COMMA (348)
HBIFHELP (349) 57
HARCH (350) 58
HIMAGE (351) 60
HFILL (352) 61
HO (353) 63
HP (354) 64
HW (355) 65
HEFUSEPPKBITS (356) 66
HGENHASHES (357) 67
HLEGACY (358) 68
HPADHDR (359) 69
H_SPKSIGN (360) 70 132
HAUTHOPT (361) 59
HPACKAGE (362) 71
HENCRYPT (363) 72
HGENKEYS (364) 73
HDQSPI (365) 74
HLOG (366) 75
HZYNQMPES1 (367) 76
HPROCESSBIT (368) 77
HNONBOOTING (369) 78
HENCRDUMP (370) 79
HVERIFY (371) 80
HSECUREDEBUG (372) 83
HREAD (373) 82
HVERIFYKDF (374) 81
HDUMP (375) 84
HDUMPDIR (376) 85
HOVLCDO (377) 86
HOUTTYPE (378) 87
H_BIF_INIT (379) 89
H_BIF_UDFBH (380) 90
H_BIF_AES (381) 91
H_BIF_PPK (382) 92
H_BIF_PSK (383) 93
H_BIF_SPK (384) 94
H_BIF_SSK (385) 95
H_BIF_SPKSIGN (386) 96
H_BIF_HIVEC (387) 129
H_BIF_HDRSIGN (388) 97
H_BIF_BOOTIMAGE (389) 98
H_BIF_BL (390) 99
H_BIF_PID (391) 101
H_BIF_ENCR (392) 100
H_BIF_AUTH (393) 102
H_BIF_CHKSM (394) 105
H_BIF_ELYHNDOFF (395) 128
H_BIF_BHSIGN (396) 130
H_BIF_TCMBOOT (397) 103
H_BIF_OPTIONALDATA (398) 104
H_BIF_POWNER (399) 106
H_BIF_PRESIGN (400) 107
H_BIF_UDF (401) 108
H_BIF_XIP (402) 109
H_BIF_ALIGN (403) 110
H_BIF_OFFSET (404) 111
H_BIF_RES (405) 112
H_BIF_LOAD (406) 113
H_BIF_TZ (407) 121
H_BIF_STARTUP (408) 114
H_BIF_KEYSRC (409) 115
H_BIF_FSBLCFG (410) 116
H_BIF_BOOTDEV (411) 117
H_BIF_DESTCPU (412) 118
H_BIF_DESTDEV (413) 119
H_BIF_EL (414) 120
H_SPLIT (415) 62 131
H_BIF_AUTHPARAM (416) 122
H_BIF_BHKEY (417) 123
H_BIF_PFW (418) 124
H_BIF_BLOCKS (419) 125
H_BIF_METAL (420) 127
H_BIF_BHIV (421) 126
H_BIF_BOOTVEC (422) 133
H_BIF_PUFDATA (423) 134
H_BIF_PTYPE (424)
H_BIF_IMAGECFG (425)
H_BIF_PMCCONFIG (426)
H_BIF_AARCH32 (427) 135
H_BIF_BIGENDIAN (428) 136
H_BIF_BOOTCONFIG (429) 137
H_BIF_COPY (430) 138
H_BIF_CORE (431) 139
H_BIF_DELAY_HANDOFF (432) 140
H_BIF_DELAY_LOAD (433) 141
H_BIF_FILE (434) 142
H_BIF_ID (435) 143
H_BIF_IMAGE (436) 144
H_BIF_METAHDR (437) 145
H_BIF_NAME (438) 146
H_BIF_PARTITION (439) 148
H_BIF_SLR (440) 149
H_BIF_TYPE (441) 150
H_BIF_KEYSRCENCR (442) 151
H_BIF_PARENTID (443) 147
H_DPACM_ENABLE (444) 152
H_BIF_USERKEYS (445) 153
HVN_BIF_PCR (446) 154
HVN_BIF_PCR_MINDEX (447) 155
HV_BIF_IMAGESTORE (448) 156


Nonterminals, with rules where they appear

$accept (194)
    on left: 0
top (195)
    on left: 1, on right: 0
option_list (196)
    on left: 2 3, on right: 1 3
option (197)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45, on right: 3
filename (198)
    on left: 46 47 48 49, on right: 4 7 8 15 16 26 40 41 42 44 175
    209 213 214 215 222 223 224 225 226 227 231
memsplit (199)
    on left: 50 51, on right: 5
filloption (200)
    on left: 52 53, on right: 6
outputType (201)
    on left: 54 55, on right: 45
helpoption (202)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83 84 85 86 87, on right: 12
bifhelpoption (203)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
    121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
    137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152
    153 154 155 156, on right: 13
wopt (204)
    on left: 157 158 159, on right: 10
loglevel (205)
    on left: 160 161 162 163 164 165, on right: 11
keysource (206)
    on left: 166 167, on right: 14
startcbc (207)
    on left: 168 169, on right: 14
key0 (208)
    on left: 170 171, on right: 14
hmac (209)
    on left: 172 173, on right: 14
keyfile (210)
    on left: 174 175, on right: 14
number (211)
    on left: 176, on right: 53
bitfile_type (212)
    on left: 177 178, on right: 23
qpsi_mode (213)
    on left: 179 180, on right: 24
opsi_mode (214)
    on left: 181 182, on right: 25
qspi_size (215)
    on left: 183 184, on right: 180
ospi_size (216)
    on left: 185 186, on right: 182
archOptions (217)
    on left: 187 188 189 190 191 192 193 194 195 196, on right: 28
key_type (218)
    on left: 197 198 199 200 201 202 203 204, on right: 31
auth_key_options (219)
    on left: 205 206, on right: 197
auth_type (220)
    on left: 207 208, on right: 35
authJtagOptions (221)
    on left: 209 210, on right: 36
authJtagType (222)
    on left: 211 212, on right: 209 210
verifyImageOptions (223)
    on left: 213, on right: 38
readImageOptions (224)
    on left: 214 215, on right: 37
readType (225)
    on left: 216 217 218 219 220, on right: 215
dumpOptions (226)
    on left: 221 222 223 224 225 226 227 228 229, on right: 39
encrDumpOptions (227)
    on left: 230 231, on right: 33


State 0

    0 $accept: . top $end

    $default  reduce using rule 2 (option_list)

    top          go to state 1
    option_list  go to state 2


State 1

    0 $accept: top . $end

    $end  shift, and go to state 3


State 2

    1 top: option_list .
    3 option_list: option_list . option

    _IMAGE              shift, and go to state 4
    _FILL               shift, and go to state 5
    _O_TOK              shift, and go to state 6
    _H                  shift, and go to state 7
    _DEBUG_TOK          shift, and go to state 8
    _LEGACY             shift, and go to state 9
    _NONBOOTING         shift, and go to state 10
    _PACKAGENAME        shift, and go to state 11
    _BIF_HELP           shift, and go to state 12
    _LOG                shift, and go to state 13
    _SPLIT              shift, and go to state 14
    _PROCESS_BITSTREAM  shift, and go to state 15
    _OUT_TYPE           shift, and go to state 16
    _DUMP               shift, and go to state 17
    _DUMP_DIR           shift, and go to state 18
    _PUF                shift, and go to state 19
    _ARCH               shift, and go to state 20
    _R                  shift, and go to state 21
    _DUAL_QSPI_MODE     shift, and go to state 22
    _DUAL_OSPI_MODE     shift, and go to state 23
    _W                  shift, and go to state 24
    _NOAUTHBLOCKS       shift, and go to state 25
    _ZYNQMPES1          shift, and go to state 26
    _OVERLAYCDO         shift, and go to state 27
    _EFUSEPPKBITS       shift, and go to state 28
    _GENERATE_HASHES    shift, and go to state 29
    _PADIMAGEHEADER     shift, and go to state 30
    _SPKSIGNATURE       shift, and go to state 31
    _GENERATE_KEYS      shift, and go to state 32
    _EFUSEPUFBITS       shift, and go to state 33
    _SECUREDEBUG        shift, and go to state 34
    _AUTHJTAG           shift, and go to state 35
    _ENCRYPT            shift, and go to state 36
    _P_TOK              shift, and go to state 37
    _READ               shift, and go to state 38
    _VERIFY             shift, and go to state 39
    _VERIFYKDF          shift, and go to state 40
    _AUTH_OPTIMIZATION  shift, and go to state 41
    _ZYNQMPENCRDUMP     shift, and go to state 42

    $default  reduce using rule 1 (top)

    option      go to state 43
    filloption  go to state 44


State 3

    0 $accept: top $end .

    $default  accept


State 4

    4 option: _IMAGE . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 49


State 5

   52 filloption: _FILL .
   53           | _FILL . number

    HEXVALUE  shift, and go to state 50

    $default  reduce using rule 52 (filloption)

    number  go to state 51


State 6

    7 option: _O_TOK . I filename
    8       | _O_TOK . filename

    I           shift, and go to state 52
    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 53


State 7

   12 option: _H . helpoption

    HBIFHELP       shift, and go to state 54
    HARCH          shift, and go to state 55
    HIMAGE         shift, and go to state 56
    HFILL          shift, and go to state 57
    HO             shift, and go to state 58
    HP             shift, and go to state 59
    HW             shift, and go to state 60
    HEFUSEPPKBITS  shift, and go to state 61
    HGENHASHES     shift, and go to state 62
    HLEGACY        shift, and go to state 63
    HPADHDR        shift, and go to state 64
    H_SPKSIGN      shift, and go to state 65
    HAUTHOPT       shift, and go to state 66
    HPACKAGE       shift, and go to state 67
    HENCRYPT       shift, and go to state 68
    HGENKEYS       shift, and go to state 69
    HDQSPI         shift, and go to state 70
    HLOG           shift, and go to state 71
    HZYNQMPES1     shift, and go to state 72
    HPROCESSBIT    shift, and go to state 73
    HNONBOOTING    shift, and go to state 74
    HENCRDUMP      shift, and go to state 75
    HVERIFY        shift, and go to state 76
    HSECUREDEBUG   shift, and go to state 77
    HREAD          shift, and go to state 78
    HVERIFYKDF     shift, and go to state 79
    HDUMP          shift, and go to state 80
    HDUMPDIR       shift, and go to state 81
    HOVLCDO        shift, and go to state 82
    HOUTTYPE       shift, and go to state 83
    H_SPLIT        shift, and go to state 84

    $default  reduce using rule 56 (helpoption)

    helpoption  go to state 85


State 8

   32 option: _DEBUG_TOK .

    $default  reduce using rule 32 (option)


State 9

   19 option: _LEGACY .

    $default  reduce using rule 19 (option)


State 10

   18 option: _NONBOOTING .

    $default  reduce using rule 18 (option)


State 11

   27 option: _PACKAGENAME . IDENTIFIER

    IDENTIFIER  shift, and go to state 86


State 12

   13 option: _BIF_HELP . bifhelpoption

    H_SPKSIGN            shift, and go to state 87
    H_BIF_INIT           shift, and go to state 88
    H_BIF_UDFBH          shift, and go to state 89
    H_BIF_AES            shift, and go to state 90
    H_BIF_PPK            shift, and go to state 91
    H_BIF_PSK            shift, and go to state 92
    H_BIF_SPK            shift, and go to state 93
    H_BIF_SSK            shift, and go to state 94
    H_BIF_SPKSIGN        shift, and go to state 95
    H_BIF_HIVEC          shift, and go to state 96
    H_BIF_HDRSIGN        shift, and go to state 97
    H_BIF_BOOTIMAGE      shift, and go to state 98
    H_BIF_BL             shift, and go to state 99
    H_BIF_PID            shift, and go to state 100
    H_BIF_ENCR           shift, and go to state 101
    H_BIF_AUTH           shift, and go to state 102
    H_BIF_CHKSM          shift, and go to state 103
    H_BIF_ELYHNDOFF      shift, and go to state 104
    H_BIF_BHSIGN         shift, and go to state 105
    H_BIF_TCMBOOT        shift, and go to state 106
    H_BIF_OPTIONALDATA   shift, and go to state 107
    H_BIF_POWNER         shift, and go to state 108
    H_BIF_PRESIGN        shift, and go to state 109
    H_BIF_UDF            shift, and go to state 110
    H_BIF_XIP            shift, and go to state 111
    H_BIF_ALIGN          shift, and go to state 112
    H_BIF_OFFSET         shift, and go to state 113
    H_BIF_RES            shift, and go to state 114
    H_BIF_LOAD           shift, and go to state 115
    H_BIF_TZ             shift, and go to state 116
    H_BIF_STARTUP        shift, and go to state 117
    H_BIF_KEYSRC         shift, and go to state 118
    H_BIF_FSBLCFG        shift, and go to state 119
    H_BIF_BOOTDEV        shift, and go to state 120
    H_BIF_DESTCPU        shift, and go to state 121
    H_BIF_DESTDEV        shift, and go to state 122
    H_BIF_EL             shift, and go to state 123
    H_SPLIT              shift, and go to state 124
    H_BIF_AUTHPARAM      shift, and go to state 125
    H_BIF_BHKEY          shift, and go to state 126
    H_BIF_PFW            shift, and go to state 127
    H_BIF_BLOCKS         shift, and go to state 128
    H_BIF_METAL          shift, and go to state 129
    H_BIF_BHIV           shift, and go to state 130
    H_BIF_BOOTVEC        shift, and go to state 131
    H_BIF_PUFDATA        shift, and go to state 132
    H_BIF_AARCH32        shift, and go to state 133
    H_BIF_BIGENDIAN      shift, and go to state 134
    H_BIF_BOOTCONFIG     shift, and go to state 135
    H_BIF_COPY           shift, and go to state 136
    H_BIF_CORE           shift, and go to state 137
    H_BIF_DELAY_HANDOFF  shift, and go to state 138
    H_BIF_DELAY_LOAD     shift, and go to state 139
    H_BIF_FILE           shift, and go to state 140
    H_BIF_ID             shift, and go to state 141
    H_BIF_IMAGE          shift, and go to state 142
    H_BIF_METAHDR        shift, and go to state 143
    H_BIF_NAME           shift, and go to state 144
    H_BIF_PARTITION      shift, and go to state 145
    H_BIF_SLR            shift, and go to state 146
    H_BIF_TYPE           shift, and go to state 147
    H_BIF_KEYSRCENCR     shift, and go to state 148
    H_BIF_PARENTID       shift, and go to state 149
    H_DPACM_ENABLE       shift, and go to state 150
    H_BIF_USERKEYS       shift, and go to state 151
    HVN_BIF_PCR          shift, and go to state 152
    HVN_BIF_PCR_MINDEX   shift, and go to state 153
    HV_BIF_IMAGESTORE    shift, and go to state 154

    $default  reduce using rule 88 (bifhelpoption)

    bifhelpoption  go to state 155


State 13

   11 option: _LOG . loglevel

    ERROR    shift, and go to state 156
    WARNING  shift, and go to state 157
    INFO     shift, and go to state 158
    DEBUG    shift, and go to state 159
    TRACE    shift, and go to state 160

    $default  reduce using rule 160 (loglevel)

    loglevel  go to state 161


State 14

    5 option: _SPLIT . memsplit

    MCS  shift, and go to state 162
    BIN  shift, and go to state 163

    memsplit  go to state 164


State 15

   23 option: _PROCESS_BITSTREAM . bitfile_type

    MCS  shift, and go to state 165
    BIN  shift, and go to state 166

    bitfile_type  go to state 167


State 16

   45 option: _OUT_TYPE . outputType

    MCS  shift, and go to state 168
    BIN  shift, and go to state 169

    outputType  go to state 170


State 17

   39 option: _DUMP . dumpOptions

    DUMP_SLAVE_PDIS  shift, and go to state 171
    DUMP_PUF_PDI     shift, and go to state 172
    READ_BH          shift, and go to state 173
    IDENTIFIER       shift, and go to state 45
    FILENAME         shift, and go to state 46
    QFILENAME        shift, and go to state 47
    HEXSTRING        shift, and go to state 48

    filename     go to state 174
    dumpOptions  go to state 175


State 18

   40 option: _DUMP_DIR . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 176


State 19

   41 option: _PUF . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 177


State 20

   28 option: _ARCH . archOptions

    ZYNQ            shift, and go to state 178
    ZYNQMP          shift, and go to state 179
    VERSAL          shift, and go to state 180
    FPGA            shift, and go to state 181
    VERSALNET       shift, and go to state 182
    TELLURIDE       shift, and go to state 183
    VERSAL_2VE_2VM  shift, and go to state 184
    LASSEN          shift, and go to state 185
    LASSEN_DL9      shift, and go to state 186
    SPARTANUP       shift, and go to state 187

    archOptions  go to state 188


State 21

   29 option: _R .

    $default  reduce using rule 29 (option)


State 22

   24 option: _DUAL_QSPI_MODE . qpsi_mode

    PARALLEL  shift, and go to state 189
    STACKED   shift, and go to state 190

    qpsi_mode  go to state 191


State 23

   25 option: _DUAL_OSPI_MODE . opsi_mode

    PARALLEL  shift, and go to state 192
    STACKED   shift, and go to state 193

    opsi_mode  go to state 194


State 24

   10 option: _W . wopt

    ON   shift, and go to state 195
    OFF  shift, and go to state 196

    $default  reduce using rule 157 (wopt)

    wopt  go to state 197


State 25

   30 option: _NOAUTHBLOCKS .

    $default  reduce using rule 30 (option)


State 26

   34 option: _ZYNQMPES1 .

    $default  reduce using rule 34 (option)


State 27

   44 option: _OVERLAYCDO . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 198


State 28

   15 option: _EFUSEPPKBITS . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 199


State 29

   17 option: _GENERATE_HASHES .

    $default  reduce using rule 17 (option)


State 30

   20 option: _PADIMAGEHEADER .
   21       | _PADIMAGEHEADER . EQUALS HEXSTRING
   22       | _PADIMAGEHEADER . HEXSTRING

    HEXSTRING  shift, and go to state 200
    EQUALS     shift, and go to state 201

    $default  reduce using rule 20 (option)


State 31

   26 option: _SPKSIGNATURE . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 202


State 32

   31 option: _GENERATE_KEYS . key_type

    PEM        shift, and go to state 203
    RSA        shift, and go to state 204
    ECDSAP521  shift, and go to state 205
    AUTH       shift, and go to state 206
    GREY       shift, and go to state 207
    METAL      shift, and go to state 208
    LMS        shift, and go to state 209
    ECDSA      shift, and go to state 210

    key_type  go to state 211


State 33

   16 option: _EFUSEPUFBITS . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 212


State 34

   35 option: _SECUREDEBUG . auth_type

    RSA    shift, and go to state 213
    ECDSA  shift, and go to state 214

    auth_type  go to state 215


State 35

   36 option: _AUTHJTAG . authJtagOptions

    RSA    shift, and go to state 216
    ECDSA  shift, and go to state 217

    authJtagOptions  go to state 218
    authJtagType     go to state 219


State 36

   14 option: _ENCRYPT . keysource startcbc key0 hmac keyfile

    BBRAM  shift, and go to state 220
    EFUSE  shift, and go to state 221

    keysource  go to state 222


State 37

    9 option: _P_TOK . IDENTIFIER

    IDENTIFIER  shift, and go to state 223


State 38

   37 option: _READ . readImageOptions

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename          go to state 224
    readImageOptions  go to state 225


State 39

   38 option: _VERIFY . verifyImageOptions

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename            go to state 226
    verifyImageOptions  go to state 227


State 40

   42 option: _VERIFYKDF . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 228


State 41

   43 option: _AUTH_OPTIMIZATION .

    $default  reduce using rule 43 (option)


State 42

   33 option: _ZYNQMPENCRDUMP . encrDumpOptions

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    $default  reduce using rule 230 (encrDumpOptions)

    filename         go to state 229
    encrDumpOptions  go to state 230


State 43

    3 option_list: option_list option .

    $default  reduce using rule 3 (option_list)


State 44

    6 option: filloption .

    $default  reduce using rule 6 (option)


State 45

   47 filename: IDENTIFIER .

    $default  reduce using rule 47 (filename)


State 46

   48 filename: FILENAME .

    $default  reduce using rule 48 (filename)


State 47

   49 filename: QFILENAME .

    $default  reduce using rule 49 (filename)


State 48

   46 filename: HEXSTRING .

    $default  reduce using rule 46 (filename)


State 49

    4 option: _IMAGE filename .

    $default  reduce using rule 4 (option)


State 50

  176 number: HEXVALUE .

    $default  reduce using rule 176 (number)


State 51

   53 filloption: _FILL number .

    $default  reduce using rule 53 (filloption)


State 52

    7 option: _O_TOK I . filename

    IDENTIFIER  shift, and go to state 45
    FILENAME    shift, and go to state 46
    QFILENAME   shift, and go to state 47
    HEXSTRING   shift, and go to state 48

    filename  go to state 231


State 53

    8 option: _O_TOK filename .

    $default  reduce using rule 8 (option)


State 54

   57 helpoption: HBIFHELP .

    $default  reduce using rule 57 (helpoption)


State 55

   58 helpoption: HARCH .

    $default  reduce using rule 58 (helpoption)


State 56

   60 helpoption: HIMAGE .

    $default  reduce using rule 60 (helpoption)


State 57

   61 helpoption: HFILL .

    $default  reduce using rule 61 (helpoption)


State 58

   63 helpoption: HO .

    $default  reduce using rule 63 (helpoption)


State 59

   64 helpoption: HP .

    $default  reduce using rule 64 (helpoption)


State 60

   65 helpoption: HW .

    $default  reduce using rule 65 (helpoption)


State 61

   66 helpoption: HEFUSEPPKBITS .

    $default  reduce using rule 66 (helpoption)


State 62

   67 helpoption: HGENHASHES .

    $default  reduce using rule 67 (helpoption)


State 63
